--- a/MireaProject/app/src/main/res/layout/fragment_worker.xml
+++ b/MireaProject/app/src/main/res/layout/fragment_worker.xml
@@ -23,9 +23,10 @@
                 android:id="@+id/imageView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/notification"
-                app:tint="#FFFFFF"
-                android:contentDescription="Notification"/>
+                android:layout_marginTop="40dp"
+                android:contentDescription="Notification"
+                android:src="@drawable/notification_icon"
+                app:tint="#FFFFFF" />
         </LinearLayout>
 
         <LinearLayout
