--- a/MireaProject/app/src/main/res/layout/nav_header_main.xml
+++ b/MireaProject/app/src/main/res/layout/nav_header_main.xml
@@ -21,15 +21,16 @@
         app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Breez"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-    <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewUserEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ilya66401@gmail.com" />
+        android:text="email" />
+
+    <Button
+        android:id="@+id/buttonLogOut"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:backgroundTint="#2CCA98"
+        android:text="Log out"
+        android:textSize="10sp" />
 </LinearLayout>
