--- a/MireaProject/app/src/main/res/menu/activity_main_drawer.xml
+++ b/MireaProject/app/src/main/res/menu/activity_main_drawer.xml
@@ -40,6 +40,10 @@
             android:id="@+id/nav_fileProcessingFragment"
             android:icon="@drawable/file_icon"
             android:title="@string/menu_fileProcessing"/>
+        <item
+            android:id="@+id/nav_apiFragment"
+            android:icon="@drawable/api_icon"
+            android:title="@string/menu_api"/>
 
         <!--        <item-->
         <!--            android:id="@+id/nav_gallery"-->
