--- a/MireaProject/app/src/main/res/navigation/mobile_navigation.xml
+++ b/MireaProject/app/src/main/res/navigation/mobile_navigation.xml
@@ -50,6 +50,11 @@
         android:name="ru.mirea.shamrovio.mireaproject.ui.lesson6.fileprocessing.FileProcessingFragment"
         android:label="@string/menu_fileProcessing"
         tools:layout="@layout/fragment_file_processing"/>
+    <fragment
+        android:id="@+id/nav_apiFragment"
+        android:name="ru.mirea.shamrovio.mireaproject.ui.lesson7.ApiFragment"
+        android:label="@string/menu_api"
+        tools:layout="@layout/fragment_api"/>
 
     <!--    <fragment-->
     <!--        android:id="@+id/nav_gallery"-->
