--- a/MireaProject/app/src/main/res/menu/activity_main_drawer.xml
+++ b/MireaProject/app/src/main/res/menu/activity_main_drawer.xml
@@ -44,6 +44,10 @@
             android:id="@+id/nav_apiFragment"
             android:icon="@drawable/api_icon"
             android:title="@string/menu_api"/>
+        <item
+            android:id="@+id/nav_mapFragment"
+            android:icon="@drawable/map_icon"
+            android:title="@string/menu_map"/>
 
         <!--        <item-->
         <!--            android:id="@+id/nav_gallery"-->
