--- a/MireaProject/app/src/main/res/navigation/mobile_navigation.xml
+++ b/MireaProject/app/src/main/res/navigation/mobile_navigation.xml
@@ -55,6 +55,11 @@
         android:name="ru.mirea.shamrovio.mireaproject.ui.lesson7.ApiFragment"
         android:label="@string/menu_api"
         tools:layout="@layout/fragment_api"/>
+    <fragment
+        android:id="@+id/nav_mapFragment"
+        android:name="ru.mirea.shamrovio.mireaproject.ui.lesson8.MapFragment"
+        android:label="@string/menu_map"
+        tools:layout="@layout/fragment_map"/>
 
     <!--    <fragment-->
     <!--        android:id="@+id/nav_gallery"-->
