--- a/FreshChef/app/src/main/res/values/colors.xml
+++ b/FreshChef/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="main_green">#6FCE95</color>
 </resources>
