--- a/FreshChef/app/src/main/res/layout/activity_account.xml
+++ b/FreshChef/app/src/main/res/layout/activity_account.xml
@@ -68,6 +68,7 @@
                 android:layout_height="20dp"
                 android:layout_weight="1"
                 android:text="Сохранить"
+                android:backgroundTint="@color/buttons_green"
                 android:visibility="visible" />
 
             <Button
@@ -76,6 +77,7 @@
                 android:layout_height="20dp"
                 android:layout_weight="1"
                 android:text="Выйти"
+                android:backgroundTint="@color/buttons_green"
                 android:visibility="visible" />
 
         </LinearLayout>
