--- a/FreshChef/app/src/main/res/layout/activity_authorization.xml
+++ b/FreshChef/app/src/main/res/layout/activity_authorization.xml
@@ -98,6 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Войти"
+                android:backgroundTint="@color/buttons_green"
                 android:visibility="visible" />
 
             <Button
@@ -106,6 +107,7 @@
                 android:layout_height="32dp"
                 android:layout_weight="1"
                 android:text="Зарегистрироваться"
+                android:backgroundTint="@color/buttons_green"
                 android:visibility="gone" />
 
         </LinearLayout>
