--- a/FreshChef/bottomnavigationapp/src/main/res/layout/fragment_catalog.xml
+++ b/FreshChef/bottomnavigationapp/src/main/res/layout/fragment_catalog.xml
@@ -5,8 +5,16 @@
     android:layout_height="match_parent"
     tools:context=".ui.catalog.CatalogFragment">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
 </FrameLayout>
